# neptts-bench

./: .gitignore  LICENSE  README.md  manifest
benchmark/: sentences.json
benchmark/results/: asr_results_chirp2.json  asr_results_multi.json  asr_roundtrip.json  asr_roundtrip_large_v2.json  asr_roundtrip_mlx.json  audio_stats.json  auto_mos_scoreq.json  nepalimos_predictions.json
benchmark/runner/: asr_roundtrip.py  phonological_abx.py  run_benchmark.py  utils.py
model/: README.md  train_nepali_mos.py
neptts-eval/: CHANGELOG.md  README.md  pyproject.toml
neptts-eval/src/neptts_eval/: __init__.py  asr_eval.py  audio.py  baselines.json  cli.py  data.py  metrics.py  nepalimos_eval.py  normalize.py  report.py  scoreq_eval.py  synthesize.py
paper/: .gitignore  REVIEW_SYNTHESIS.md  REVISION_NOTES.md  analyze_results.py  neptts_bench.tex  neptts_bench_8pg.tex  outline.md  references.bib  supervisor_report.md
rating-app/: Dockerfile  docker-compose.prod.yml  server.py
rating-app/templates/: dashboard.html  pair_test.html  pairs.html  rate.html  rate_long.html  voices.html
scripts/: compute_audio_stats.py  compute_stat_rigor.py  eval_asr_roundtrip.py  eval_auto_mos.py  eval_whisper_large_v2.py  extract_phonological.py  fix_sentence_mismatch.py  generate_elevenlabs_tts.py  generate_tingting_tts.py  generate_tts.py  infer_nepalimos.py
